[package]
name = "forest-to-notion-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
clap = { version = "4.1.6", features = ["derive"] }
base64 = "0.13.1"
openssl = { version = "0.10.45", features = ["vendored"] }

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
debug = false
strip = true

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"